# multi-storage-client

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .licenses.md  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  flake.nix  justfile  pyproject.toml  security.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .production.yml  slack.yml  supply.yml
.gitlab/merge_request_templates/: Default.md  Release.md
.gitlab/pipelines/: .beta.yml  .production.yml  .source.yml  supply.yml  update.yml
.grafana/: README.md  grafana.ini
.grafana/provisioning/alerting/: alerting.yaml
.grafana/provisioning/dashboards/: dashboards.yaml
.grafana/provisioning/dashboards/definitions/: multi-storage-client.json
.grafana/provisioning/datasources/: datasources.yaml
.grafana/provisioning/plugins/: plugins.yaml
.mimir/: mimir.yaml
.minio/: minio.yaml
.release_notes/: .unreleased.md  0.12.1.md  0.13.0.md  0.14.0.md  0.14.1.md  0.15.0.md  0.16.0.md  0.17.0.md  0.18.0.md  0.19.0.md  0.20.0.md  0.20.1.md  0.20.2.md  0.20.3.md  0.21.0.md
.tempo/: tempo.yaml
docs/: README.md
docs/src/: conf.py  index.rst
docs/src/_static/: custom.css
docs/src/api_reference/: index.rst
docs/src/config/: index.rst
docs/src/indices/: index.rst
docs/src/references/: api.rst  configuration.rst
docs/src/user_guide/: concepts.rst  index.rst  installation.rst  libraries.rst  manifests.rst  quickstart.rst  telemetry.rst
examples/: quickstart.ipynb
src/multistorageclient/: __init__.py  cache.py  client.py  config.py  constants.py  file.py  pathlib.py  rclone.py  retry.py  schema.py  shortcuts.py  types.py  utils.py
src/multistorageclient/caching/: README.md  __init__.py  cache_backend.py  cache_config.py  cache_item.py  distributed_hint.py  eviction_policy.py
src/multistorageclient/commands/: msc_benchmark.py
src/multistorageclient/commands/cli/: main.py
src/multistorageclient/commands/cli/actions/: __init__.py  action.py  help.py  sync.py
src/multistorageclient/contrib/: async_fs.py  numpy.py  pickle.py  torch.py  xarray.py  zarr.py
src/multistorageclient/contrib/os/: __init__.py  path.py
src/multistorageclient/contrib/torch/: __init__.py  core.py  filesystem.py
src/multistorageclient/generators/: __init__.py  manifest_metadata.py
src/multistorageclient/instrumentation/: __init__.py  auth.py  error_aware_processor.py  utils.py
src/multistorageclient/providers/: __init__.py  ais.py  azure.py  base.py  gcs.py  manifest_metadata.py  oci.py  posix_file.py  s3.py  s8k.py
src/multistorageclient/telemetry/: __init__.py
src/multistorageclient/telemetry/attributes/: __init__.py  base.py  environment_variables.py  host.py  msc_config.py  process.py  static.py  thread.py
src/multistorageclient/telemetry/metrics/: export.py
src/multistorageclient/telemetry/metrics/exporters/: otlp_msal.py
src/multistorageclient/telemetry/metrics/readers/: diperiodic_exporting.py
tests/: .pylintrc
tests/e2e/: common.py  msc_config.template.json  msc_config.template.yaml  rclone.template.conf  test_azure.py  test_gcs.py  test_oci.py  test_s3.py  test_swift.py
tests/integ/: test_fsspec.py  test_manifest_metadata.py  test_shortcuts.py  test_storage_providers.py
tests/test_multistorageclient/e2e/: common.py  msc_config.template.yaml  test_azure.py  test_distributed_hint.py  test_gcs.py  test_oci.py  test_s3.py  test_swift.py
tests/test_multistorageclient/e2e/caching/: test_file_reads_from_cache.py
tests/test_multistorageclient/load/: local.py
tests/test_multistorageclient/unit/: conftest.py  test_cache.py  test_cache_mp.py  test_cli.py  test_config.py  test_credentials_provider.py  test_file.py  test_file_tracer.py  test_instrumentation_utils.py  test_lazy_import.py  test_minimal.py  test_pathlib.py  test_rclone.py  test_retry.py  test_schema.py  test_serialization.py  test_shortcuts.py  test_sync.py  test_telemetry.py  test_utils.py
tests/test_multistorageclient/unit/caching/: hint_utils.py  test_distributed_hint.py
tests/test_multistorageclient/unit/contrib/: test_async_fs.py  test_fsspec.py  test_numpy.py  test_os.py  test_pickle.py  test_torch.py  test_xarray.py  test_zarr.py
tests/test_multistorageclient/unit/generators/: test_manifest_metadata.py
tests/test_multistorageclient/unit/instrumentation/: test_error_aware_processor.py  test_metrics_helper.py  test_opentelemetry_auth.py
tests/test_multistorageclient/unit/instrumentation/forked/: __init__.py  test_metrics_helper.py  test_opentelemetry_config.py
tests/test_multistorageclient/unit/providers/: test_base_storage_provider.py  test_manifest_metadata.py  test_metadata_rewrite.py  test_storage_providers.py
tests/test_multistorageclient/unit/telemetry/attributes/: test_attributes_providers.py
tests/test_multistorageclient/unit/telemetry/metrics/: test_export.py
tests/test_multistorageclient/unit/telemetry/metrics/readers/: test_diperiodic_exporting.py
tests/test_multistorageclient/unit/utils/: config.py  mocks.py  tempdatastore.py
tests/test_multistorageclient/unit/utils/telemetry/metrics/: export.py
tests/test_multistorageclient/unit/utils/telemetry/trace/: export.py
tests/unit/: conftest.py  test_async_fs.py  test_cache.py  test_cache_mp.py  test_config.py  test_file.py  test_file_tracer.py  test_lazy_import.py  test_manifest_metadata.py  test_manifest_metadata_generator.py  test_metrics_helper.py  test_numpy_adaptor.py  test_opentelemetry_auth.py  test_opentelemetry_config.py  test_os_adaptor.py  test_pickle_adaptor.py  test_posix_file_storage.py  test_rclone.py  test_retry.py  test_schema.py  test_shortcuts.py  test_torch_adaptor.py  test_utils.py  test_xarray_adaptor.py  test_xr_adaptor.py  test_zarr_adaptor.py  utils.py
tests/unit/mock_module/: mocks.py
tests/unit/utils/: tempdatastore.py
